[project]
name = "streamq"
version = "0.1.0"
description = "streamq — a production async task queue (Redis Streams + Postgres), no Celery"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "redis>=5.1",            # Redis Streams client (async)
    "asyncpg>=0.30",         # durable job state in Postgres
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "orjson>=3.10",
    "prometheus-client>=0.21",
    "fastapi>=0.115",        # small API to enqueue jobs + expose /metrics
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.uv]
package = false             # deployable app, not a library — don't build a wheel

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
